// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with color 1`] = `
.c0 {
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  border: 2px solid;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #159ecb;
  background-color: #159ecb;
  color: #ffffff;
}

.c0:hover {
  border-color: #17b0e2;
  background-color: #17b0e2;
}

.c0:active {
  border-color: #17b0e2;
  background-color: #17b0e2;
  box-shadow: 0 0 5px 0 #17b0e2;
}

<ForwardRef
  color="primary"
>
  <styled.button
    color="primary"
    size="medium"
    variant="contained"
  >
    <button
      className="c0"
      color="primary"
      size="medium"
    >
      Primary button
    </button>
  </styled.button>
</ForwardRef>
`;

exports[`renders correctly with color 2`] = `
.c0 {
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  border: 2px solid;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #999999;
  background-color: #999999;
  color: #ffffff;
}

.c0:hover {
  border-color: #a6a6a6;
  background-color: #a6a6a6;
}

.c0:active {
  border-color: #a6a6a6;
  background-color: #a6a6a6;
  box-shadow: 0 0 5px 0 #a6a6a6;
}

<ForwardRef
  color="secondary"
>
  <styled.button
    color="secondary"
    size="medium"
    variant="contained"
  >
    <button
      className="c0"
      color="secondary"
      size="medium"
    >
      Secondary button
    </button>
  </styled.button>
</ForwardRef>
`;

exports[`renders correctly with variant 1`] = `
.c0 {
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  border: 2px solid;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #159ecb;
  background-color: #159ecb;
  color: #ffffff;
}

.c0:hover {
  border-color: #17b0e2;
  background-color: #17b0e2;
}

.c0:active {
  border-color: #17b0e2;
  background-color: #17b0e2;
  box-shadow: 0 0 5px 0 #17b0e2;
}

<ForwardRef
  variant="contained"
>
  <styled.button
    color="primary"
    size="medium"
    variant="contained"
  >
    <button
      className="c0"
      color="primary"
      size="medium"
    >
      Contained button
    </button>
  </styled.button>
</ForwardRef>
`;

exports[`renders correctly with variant 2`] = `
.c0 {
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  border: 2px solid;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  border-color: #159ecb;
  color: #159ecb;
}

.c0:hover {
  border-color: #17b0e2;
  color: #17b0e2;
}

.c0:active {
  border-color: #17b0e2;
  color: #17b0e2;
  box-shadow: 0 0 5px 0 #17b0e2;
}

<ForwardRef
  variant="outlined"
>
  <styled.button
    color="primary"
    size="medium"
    variant="outlined"
  >
    <button
      className="c0"
      color="primary"
      size="medium"
    >
      Outlined button
    </button>
  </styled.button>
</ForwardRef>
`;
